--- a/public/global.css
+++ b/public/global.css
@@ -1,18 +1,67 @@
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+* {
+  margin: 0;
+}
+/*
+  3. Allow percentage-based heights in the application
+*/
 html,
 body {
-  position: relative;
-  width: 100%;
   height: 100%;
 }
-
+/*
+  Typographic tweaks!
+  4. Add accessible line-height
+  5. Improve text rendering
+*/
 body {
-  color: #333;
-  margin: 0;
-  padding: 8px;
-  box-sizing: border-box;
+  line-height: 1.5;
+  -webkit-font-smoothing: antialiased;
   font-family: system-ui;
 }
-
+/*
+  6. Improve media defaults
+*/
+img,
+picture,
+video,
+canvas,
+svg {
+  display: block;
+  max-width: 100%;
+}
+/*
+  7. Remove built-in form typography styles
+*/
+input,
+button,
+textarea,
+select {
+  font: inherit;
+}
+/*
+  8. Avoid text overflows
+*/
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  overflow-wrap: break-word;
+}
+/*
+  9. Create a root stacking context
+*/
+#root,
+#__next {
+  isolation: isolate;
+}
 .visually-hidden {
   clip: rect(0 0 0 0);
   clip-path: inset(50%);
